2011-03-07  Ben Elliston  <bje@gnu.org>

	* Makefile.am (doc/dejagnu.texi): Conditional on MAINTAINER_MODE.
	* Makefile.in: Regenerate.

2011-03-06  Ben Elliston  <bje@gnu.org>

	* configure.ac (AC_INIT): Set version to 1.5.
	* configure: Regenerate.
	* runtest.exp (frame_version): Set to 1.5.
	* doc/dejagnu.texi: Regenerate.

2011-03-04  Ben Elliston  <bje@gnu.org>

	* texinfo.tex: Import latest version from ftp://tug.org/tex.

2011-03-04  Ben Elliston  <bje@gnu.org>

	* Makefile.am (EXTRA_DIST): Correct name of historical ChangeLog.
	* Makefile.in: Regenerate.

2011-03-03  Ben Elliston  <bje@gnu.org>

	* Makefile.am: Bump to GPL version 3.
	* configure.ac: Likewise.
	* Makefile.in: Regenerate.
	* aclocal.m4: Likewise.
	* configure: Likewise.

2011-03-03  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to most recent version.
	* config.sub: Likewise.

2011-03-03  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (unknown): Rename the native Tcl ::unknown
	proc to ::tcl_unknown.  If ::tcl_unknown returns a failure result,
	then fall back to the conventional DejaGnu handling.  Report from
	David Byron <dbyron@dbyron.com>.

2011-03-03  Maciej W. Rozycki  <macro@codesourcery.com>

	* lib/remote.exp (remote_expect): Pass all exception conditions up
	to the caller.

2011-03-01  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* lib/dg.exp (dg-test): Support nested calls.

2010-04-13  Ben Elliston  <bje@gnu.org>

	* testglue.c: Remove duplicated prototypes for abort and exit.

2010-03-26  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* doc/user.xml (Tcl Variables For Command Line Options): Correct
	column count.

2010-01-21  Jie Zhang  <jie.zhang@analog.com>

	* config/gdb-comm.exp (gdb_comm_load): Set breakpoints after load.

2010-01-15  Anthony Green  <green@moxielogic.com>

	* baseboards/moxie-sim.exp: New baseboard.

2009-12-10  DJ Delorie  <dj@redhat.com>

	* baseboards/rx-sim.exp: New baseboard.

2009-10-15  Ben Elliston  <bje@gnu.org>
