@@ -84,3 +84,6 @@ make_defaults_file [pwd]/setval.tmp
 foreach i [glob $srcdir/$subdir/*.test] {
     process_test $i
 }
+
+# Clean up behind ourselves.
+file delete .tmp [pwd]/setval.tmp
